tools/tree-sitter-simd/test/corpus/core.txt
==================
signature
==================

f : i64 -> i64

---

(source_file
  (declaration
    (signature
      head: (decl_head
        (identifier))
      type: (type
        arg: (type_nonfun
          (type_atom
            (type_base
              (prim_type))))
        result: (type
          (type_nonfun
            (type_atom
              (type_base
                (prim_type)))))))))

==================
clause
==================

f x = x + 1

---

(source_file
  (declaration
    (clause
      head: (decl_head
        (identifier))
      pattern: (pattern
        (identifier))
      body: (expr
        (comparison_expr
          (add_expr
            left: (add_expr
              (mul_expr
                (application_expr
                  (postfix_expr
                    (atom
                      (identifier))))))
            right: (mul_expr
              (application_expr
                (postfix_expr
                  (atom
                    (int)))))))))))

==================
let, record, projection, and update
==================

main p = let q = p { x = 3 }; r = q.x in r

---

(source_file
  (declaration
    (clause
      head: (decl_head
        (identifier))
      pattern: (pattern
        (identifier))
      body: (expr
        (let_expr
          (let_binding
            name: (identifier)
            value: (expr
              (comparison_expr
                (add_expr
                  (mul_expr
                    (application_expr
                      (postfix_expr
                        base: (postfix_expr
                          (atom
                            (identifier)))
                        update: (record_update
                          (record_field
                            name: (identifier)
                            value: (expr
                              (comparison_expr
                                (add_expr
                                  (mul_expr
                                    (application_expr
                                      (postfix_expr
                                        (atom
                                          (int)))))))))))))))))
          (let_binding
            name: (identifier)
            value: (expr
              (comparison_expr
                (add_expr
                  (mul_expr
                    (application_expr
                      (postfix_expr
                        base: (postfix_expr
                          (atom
                            (identifier)))
                        field: (identifier))))))))
          (expr
            (comparison_expr
              (add_expr
                (mul_expr
                  (application_expr
                    (postfix_expr
                      (atom
                        (identifier)))))))))))))

==================
application and infix precedence
==================

axpy a x y = a * x + y

---

(source_file
  (declaration
    (clause
      head: (decl_head
        (identifier))
      pattern: (pattern
        (identifier))
      pattern: (pattern
        (identifier))
      pattern: (pattern
        (identifier))
      body: (expr
        (comparison_expr
          (add_expr
            left: (add_expr
              (mul_expr
                left: (mul_expr
                  (application_expr
                    (postfix_expr
                      (atom
                        (identifier)))))
                right: (application_expr
                  (postfix_expr
                    (atom
                      (identifier))))))
            right: (mul_expr
              (application_expr
                (postfix_expr
                  (atom
                    (identifier)))))))))))

==================
type witness signature
==================

wrap : Type t -> t -> t

---

(source_file
  (declaration
    (signature
      head: (decl_head
        (identifier))
      type: (type
        arg: (type_nonfun
          (type_atom
            (type_base
              (type_witness
                witness: (identifier)))))
        result: (type
          arg: (type_nonfun
            (type_atom
              (type_base
                (identifier))))
          result: (type
            (type_nonfun
              (type_atom
                (type_base
                  (identifier))))))))))

==================
primitive witness pattern
==================

wrap i64 x = x

---

(source_file
  (declaration
    (clause
      head: (decl_head
        (identifier))
      pattern: (pattern
        (prim_type))
      pattern: (pattern
        (identifier))
      body: (expr
        (comparison_expr
          (add_expr
            (mul_expr
              (application_expr
                (postfix_expr
                  (atom
                    (identifier)))))))))))

==================
specialization chain signature
==================

main : i64 -> i64

---

(source_file
  (declaration
    (signature
      head: (decl_head
        (identifier))
      type: (type
        arg: (type_nonfun
          (type_atom
            (type_base
              (prim_type))))
        result: (type
          (type_nonfun
            (type_atom
              (type_base
                (prim_type)))))))))

==================
specialization chain with primitive segments
==================

main x = scalar\axpy\i64 x

---

(source_file
  (declaration
    (clause
      head: (decl_head
        (identifier))
      pattern: (pattern
        (identifier))
      body: (expr
        (comparison_expr
          (add_expr
            (mul_expr
              (application_expr
                function: (application_expr
                  (postfix_expr
                    (atom
                      (qualified_ref
                        head: (identifier)
                        segment: (identifier)
                        segment: (prim_type)))))
                argument: (postfix_expr
                  (atom
                    (identifier)))))))))))

==================
type alias declaration
==================

type v3 a = {x:a,y:a,z:a}

---

(source_file
  (declaration
    (type_alias
      name: (identifier)
      param: (identifier)
      body: (type
        (type_nonfun
          (type_atom
            (type_base
              (record_type
                (type_field
                  name: (identifier)
                  type: (type
                    (type_nonfun
                      (type_atom
                        (type_base
                          (identifier))))))
                (type_field
                  name: (identifier)
                  type: (type
                    (type_nonfun
                      (type_atom
                        (type_base
                          (identifier))))))
                (type_field
                  name: (identifier)
                  type: (type
                    (type_nonfun
                      (type_atom
                        (type_base
                          (identifier))))))))))))))

==================
operator instance declarations
==================

(*)\v3\a : v3 a -> v3 a -> v3 a
(*)\v3\a lhs rhs = lhs

---

(source_file
  (declaration
    (signature
      head: (decl_head
        (operator_head
          operator: (prim_operator)
          segment: (identifier)
          segment: (identifier)))
      type: (type
        arg: (type_nonfun
          constructor: (type_atom
            (type_base
              (identifier)))
          argument: (type_atom
            (type_base
              (identifier))))
        result: (type
          arg: (type_nonfun
            constructor: (type_atom
              (type_base
                (identifier)))
            argument: (type_atom
              (type_base
                (identifier))))
          result: (type
            (type_nonfun
              constructor: (type_atom
                (type_base
                  (identifier)))
              argument: (type_atom
                (type_base
                  (identifier)))))))))
  (declaration
    (clause
      head: (decl_head
        (operator_head
          operator: (prim_operator)
          segment: (identifier)
          segment: (identifier)))
      pattern: (pattern
        (identifier))
      pattern: (pattern
        (identifier))
      body: (expr
        (comparison_expr
          (add_expr
            (mul_expr
              (application_expr
                (postfix_expr
                  (atom
                    (identifier)))))))))))
